# OwlDependencies

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  Readme.md  check_updates.py  pyproject.toml
.claude/rules/: ci-scripts.md  cmake.md  general.md  new-library.md  recipes.md
CI/: AddDefault.sh  Build.py  build.sh  check_ext_deps.py  run_docker.sh
Libs/FreeType/: CMakeLists.txt  freetype.py
Libs/box2d/: box2d.py
Libs/box2d/modifs/: DmgrInstall.cmake  box2d-config.cmake.in
Libs/brotli/: brotli.py
Libs/cpptrace/: CMakeLists.txt  cpptrace.py
Libs/curl/: CMakeLists.txt  curl.py
Libs/debugbreak/: CMakeLists.txt  conanfile.py  debugbreak-config.cmake.in  debugbreak.py
Libs/debugbreak/sources/: CMakeLists.txt
Libs/entt/: conanfile.py  entt.py
Libs/fmt/: CMakeLists.txt  conanfile.py  fmt.py
Libs/glad/: CMakeLists.txt  conanfile.py  glad.py  spdlog.py
Libs/glad/sources/: CMakeLists.txt  glad-config.cmake.in
Libs/glad/sources/glad-2.0.4/include/glad/: gl.h  vulkan.h
Libs/glad/sources/glad-2.0.4/src/: vulkan.c
Libs/glfw/: conanfile.py  glfw.py
Libs/glm/: CMakeLists.txt  conanfile.py  glm.py
Libs/glm/glm-0.9.9.8/glm/: CMakeLists.txt
Libs/glm/sources/: CMakeLists.txt
Libs/glslang/: CMakeLists.txt  conanfile.py  glslang.py
Libs/googletest/: googletest.py
Libs/harfbuzz/: harfbuzz.py
Libs/imgui/: CMakeLists.txt  conanfile.py  imgui.py
Libs/imgui/sources/: CMakeLists.txt  imgui-config.cmake.in
Libs/imgui_color_text_edit/: imgui_color_text_edit.py
Libs/imgui_color_text_edit/sources/: CMakeLists.txt  imgui_color_text_edit-config.cmake.in
Libs/imgui_markdown/: imgui_markdown.py
Libs/imgui_markdown/sources/: CMakeLists.txt  imgui_markdown-config.cmake.in
Libs/imgui_node_editor/: imgui_node_editor.py
Libs/imgui_node_editor/sources/: CMakeLists.txt  imgui_node_editor-config.cmake.in
Libs/imguizmo/: CMakeLists.txt  conanfile.py  imguizmo-config.cmake.in  imguizmo.py
Libs/imguizmo/sources/: CMakeLists.txt
Libs/implot/: implot.py
Libs/implot/sources/: CMakeLists.txt  implot-config.cmake.in
Libs/jsoncpp/: jsoncpp.py
Libs/libdwarf/: CMakeLists.txt  libdwarf.py
Libs/libpng/: libpng.py
Libs/libsndfile/: libsndfile.py
Libs/lua/: lua.py
Libs/lua/sources/: CMakeLists.txt  lua-config.cmake.in
Libs/lunasvg/: lunasvg.py
Libs/magic_enum/: conanfile.py  magic_enum.py
Libs/mavsdk/: CMakeLists.txt  mavsdk.py
Libs/mavsdk/sources/: CMakeLists.txt
Libs/md4c/: md4c.py
Libs/msdf-atlas-gen/: CMakeLists.txt  msdf-atlas-gen.py
Libs/msdfgen/: CMakeLists.txt  msdfgen.py
Libs/nanosvg/: nanosvg.py
Libs/nfd/: nfd.py
Libs/nfd/configs/: CMakeLists.txt
Libs/openal/: openal.py
Libs/opencv/: CMakeLists.txt  opencv.py
Libs/shaderc/: shaderc.py
Libs/shaderc/sources/: CMakeLists.txt
Libs/shaderc/sources/modif/SPIRV-Headers/: CMakeLists.txt
Libs/shaderc/sources/modif/glslang/: CMakeLists.txt
Libs/shaderc/sources/modif/glslang/SPIRV/: CMakeLists.txt
Libs/shaderc/sources/modif/glslang/StandAlone/: CMakeLists.txt
Libs/shaderc/sources/modif/glslang/glslang/: CMakeLists.txt
Libs/shaderc/sources/modif/glslang/glslang/OSDependent/Unix/: CMakeLists.txt
Libs/shaderc/sources/modif/glslang/glslang/OSDependent/Windows/: CMakeLists.txt
Libs/shaderc/sources/modif/shaderc/: CMakeLists.txt
Libs/shaderc/sources/modif/shaderc/glslc/: CMakeLists.txt
Libs/shaderc/sources/modif/shaderc/libshaderc/: CMakeLists.txt
Libs/shaderc/sources/modif/shaderc/libshaderc_util/: CMakeLists.txt
Libs/shaderc/sources/modif_shaderc/: CMakeLists.txt
Libs/shaderc/sources/modif_shaderc/cmake/: utils.cmake
Libs/shaderc/sources/modif_shaderc/glslc/: CMakeLists.txt
Libs/shaderc/sources/modif_shaderc/libshaderc/: CMakeLists.txt
Libs/shaderc/sources/modif_shaderc/libshaderc_util/: CMakeLists.txt
Libs/spdlog/: CMakeLists.txt  conanfile.py  spdlog.py
Libs/spirv-cross/: conanfile.py  spirv-cross.py
Libs/spirv-cross/sources/: CMakeLists.txt
Libs/spirv-header/: spirv-header.py
Libs/spirv-headers/: conanfile.py
Libs/spirv-tools/: CMakeLists.txt  conanfile.py  spirv-tools.py
Libs/stb/: stb.py
Libs/stb/stb_image/: CMakeLists.txt
Libs/stb_image/: conanfile.py
Libs/taskflow/: taskflow.py
Libs/tinygltf/: tinygltf.py
Libs/tinyobjloader/: tinyobjloader.py
Libs/tinyply/: tinyply.py
Libs/tinyxml2/: CMakeLists.txt  tinyxml2.py
Libs/ufbx/: ufbx.py
Libs/ufbx/modif/: CMakeLists.txt  ufbx-config.cmake.in
Libs/vulkan/: vulkan.py
Libs/vulkan/source/: CMakeLists.txt
Libs/vulkan_sdk/: vulkan_sdk.py
Libs/vulkan_sdk/source/: CMakeLists.txt
Libs/yaml-cpp/: CMakeLists.txt  conanfile.py  yaml-cpp.py
Libs/zeus/: zeus.py
Libs/zlib/: zlib.py
Libs/zlib/modifs/: DmgrInstall.cmake  zlib-config.cmake.in
Libs/zstd/: zstd.py
Libs/zstd/sources/: CMakeLists.txt
PyUtility/: functions.py  information.py  introspection.py  lib_manager.py  regenerate.py
fmt/: conanfile.py
old_libs/debugbreak/: CMakeLists.txt  debugbreak-config.cmake.in
old_libs/glfw/: conanfile.py
old_libs/glm/: conanfile.py  glm-config.cmake.in
old_libs/glslang/: conanfile.py
old_libs/googletest/: conanfile.py
old_libs/imgui/: CMakeLists.txt  conanfile.py
old_libs/nfd/: conanfile.py
old_libs/shaderc/: CMakeLists.txt  conanfile.py  depends
old_libs/spirv-cross/: conanfile.py
old_libs/spirv-tools/: conanfile.py  depends
old_libs/stb_image/: stb_image-config.cmake.in
old_libs/stb_image/stb_image-2.28/: stb_image.h
old_libs/yaml-cpp/: conanfile.py
