[tool.poetry]
name = "OwlDependencies"
package-mode = false
description = ""
authors = ["Silmaen <genteur.slayer@laposte.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.build.dependencies]
depmanager = "^0.5.4"
rich = "^14.2.0"
requests-toolbelt = "^1.0.0"
pyyaml = "^6.0.2"
cryptography = "^46.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
